--- a/Echo/Localizable.xcstrings
+++ b/Echo/Localizable.xcstrings
@@ -193,6 +193,9 @@
     "Done" : {
       "comment" : "The label for the button to exit onboarding"
     },
+    "Echo prefixes some items with 'current sentence' and 'current word'. However, this might slow you down so you may choose to disable the prompt." : {
+      "comment" : "Footer for the section in settings about prompts"
+    },
     "Echo: Auditory Scanning" : {
       "comment" : "The main navigation title for the whole app"
     },
@@ -320,10 +323,10 @@
       "comment" : "Label for toggle that controls when scanning starts"
     },
     "Scanning" : {
-      "comment" : "Label for the scanning during onboarding\nLabel for toggle to turn scanning off and on\nLabel for the navigation link to the scanning options page"
+      "comment" : "Label for toggle to turn scanning off and on\nLabel for the navigation link to the scanning options page\nLabel for the scanning during onboarding"
     },
     "Scanning is when Echo automatically cycles through the items in the list one ofter the other reading them aloud one a time." : {
-      "comment" : "Explaination of scanning during onboarding\nThe footer explaining what scanning loops is"
+      "comment" : "The footer explaining what scanning loops is\nExplaination of scanning during onboarding"
     },
     "Scanning Options" : {
       "comment" : "The navigation title for the scanning options page"
@@ -427,6 +430,9 @@
     "Urdu (Experimental)" : {
       "comment" : "The label for the urdu language when setting prediction language, make sure to include the experimental tag"
     },
+    "Use Prompts" : {
+      "comment" : "Label for toggle prompts"
+    },
     "Voice" : {
       "comment" : "Label for NavigationLink that takes you to a voice picker page"
     },
@@ -466,6 +472,9 @@
     "When you press a switch, use the arrow or swipe on the screen" : {
       "comment" : "A label for an analytics event"
     },
+    "Word and Letter Prompt" : {
+      "comment" : "Label for the section in settings about prompts"
+    },
     "Word prediction" : {
       "comment" : "Label for toggle to turn word prediction off and on"
     },
@@ -479,7 +488,7 @@
       "comment" : "The footer for the options that control the cue voice"
     },
     "Your speaking voice is the voice that is used to communicate with your communication partner. Select the options that you want to represent your voice." : {
-      "comment" : "Explanation of speaking voice during onboarding\nThe footer for the options that control the speaking voice"
+      "comment" : "The footer for the options that control the speaking voice\nExplanation of speaking voice during onboarding"
     }
   },
   "version" : "1.0"
