--- a/Echo/Localizable.xcstrings
+++ b/Echo/Localizable.xcstrings
@@ -98,7 +98,7 @@
       "comment" : "Accesibility label for logo"
     },
     "Analytics" : {
-      "comment" : "The label for the section about analytics\nLabel for analytics picker"
+      "comment" : "Label for analytics picker\nThe label for the section about analytics"
     },
     "Analytics & Telemetry" : {
       "comment" : "The navigation title for the Analytics & Telemetry options page"
@@ -155,7 +155,7 @@
       "comment" : "Explaination of swipe controls"
     },
     "Control Echo using switch presses to perform actions. Add new switches and change what they trigger." : {
-      "comment" : "Description describing what switch access is\nFooter description describing what switch access is"
+      "comment" : "Footer description describing what switch access is\nDescription describing what switch access is"
     },
     "Copied!" : {
       "comment" : "Label thats shown when text is copied"
@@ -296,7 +296,7 @@
       "comment" : "Explaination of prediction during onboarding"
     },
     "Prediction" : {
-      "comment" : "Label for the section in settings about prediction\nLabel for toggle to turn prediction off and on"
+      "comment" : "Label for toggle to turn prediction off and on\nLabel for the section in settings about prediction"
     },
     "Prediction helps you to get to the words you want to speak faster" : {
       "comment" : "Footer for the section in settings about prediction"
@@ -326,7 +326,7 @@
       "comment" : "Label for toggle that controls when scanning starts"
     },
     "Scanning" : {
-      "comment" : "Label for toggle to turn scanning off and on\nLabel for the navigation link to the scanning options page\nLabel for the scanning during onboarding"
+      "comment" : "Label for the navigation link to the scanning options page\nLabel for toggle to turn scanning off and on\nLabel for the scanning during onboarding"
     },
     "Scanning is when Echo automatically cycles through the items in the list one ofter the other reading them aloud one a time." : {
       "comment" : "The footer explaining what scanning loops is\nExplaination of scanning during onboarding"
@@ -392,7 +392,7 @@
       "comment" : "The default switch name"
     },
     "Switch Control" : {
-      "comment" : "Header for switch control in onboarding page\nLabel for toggle to turn switch control off and on"
+      "comment" : "Label for toggle to turn switch control off and on\nHeader for switch control in onboarding page"
     },
     "Switch Key" : {
       "comment" : "Header text for the switch keyboard area"
@@ -427,14 +427,14 @@
     "Undo" : {
       "comment" : "The label for the button that will remove the last character. Also known as backspace"
     },
-    "Unmute" : {
-      "comment" : "Label on button to unmute video"
-    },
     "Urdu (Experimental)" : {
       "comment" : "The label for the urdu language when setting prediction language, make sure to include the experimental tag"
     },
     "Use Prompts" : {
       "comment" : "Label for toggle prompts"
+    },
+    "Video Goes Here" : {
+      "comment" : "Placeholder"
     },
     "Voice" : {
       "comment" : "Label for NavigationLink that takes you to a voice picker page"
@@ -464,6 +464,9 @@
       "comment" : "A label for an analytics event"
     },
     "When the app is opened" : {
+      "comment" : "A label for an analytics event"
+    },
+    "When you complete the initial onboarding steps." : {
       "comment" : "A label for an analytics event"
     },
     "When you enter a full word we log if it was predicted or not. We do not log the word" : {
