[PATCH] Update text

--- a/Echo/Localizable.xcstrings
+++ b/Echo/Localizable.xcstrings
@@ -148,9 +148,6 @@
     "Collect Analytics?" : {
       "comment" : "Header for analytics onboarding page"
     },
-    "Communication for the visual impaired" : {
-      "comment" : "Explain what Echo is"
-    },
     "Contact Us" : {
       "comment" : "A link to the contact page"
     },
@@ -216,6 +213,9 @@
     },
     "Enter Switch" : {
 
+    },
+    "Every Character Speaks Volumes" : {
+      "comment" : "Explain what Echo is"
     },
     "External Links" : {
       "comment" : "Label for the navigation link to the initial options page"
@@ -338,10 +338,10 @@
       "comment" : "Label for toggle that controls when scanning starts"
     },
     "Scanning" : {
-      "comment" : "Label for the scanning during onboarding\nLabel for toggle to turn scanning off and on\nLabel for the navigation link to the scanning options page"
+      "comment" : "Label for toggle to turn scanning off and on\nLabel for the navigation link to the scanning options page\nLabel for the scanning during onboarding"
     },
     "Scanning is when Echo automatically cycles through the items in the list one ofter the other reading them aloud one a time." : {
-      "comment" : "Explaination of scanning during onboarding\nThe footer explaining what scanning loops is"
+      "comment" : "The footer explaining what scanning loops is\nExplaination of scanning during onboarding"
     },
     "Scanning Options" : {
       "comment" : "The navigation title for the scanning options page"
