--- a/Echo/Localizable.xcstrings
+++ b/Echo/Localizable.xcstrings
@@ -56,7 +56,7 @@
       "comment" : "Accesibility label for logo"
     },
     "Analytics" : {
-      "comment" : "The label for the section about analytics\nLabel for analytics picker"
+      "comment" : "Label for analytics picker\nThe label for the section about analytics"
     },
     "Analytics & Telemetry" : {
       "comment" : "The navigation title for the Analytics & Telemetry options page"
@@ -110,7 +110,7 @@
       "comment" : "Explaination of swipe controls"
     },
     "Control Echo using switch presses to perform actions. Add new switches and change what they trigger." : {
-      "comment" : "Footer description describing what switch access is\nDescription describing what switch access is"
+      "comment" : "Description describing what switch access is\nFooter description describing what switch access is"
     },
     "Copied!" : {
       "comment" : "Label thats shown when text is copied"
@@ -368,7 +368,7 @@
       "comment" : "The default switch name"
     },
     "Switch Control" : {
-      "comment" : "Label for toggle to turn switch control off and on\nHeader for switch control in onboarding page"
+      "comment" : "Header for switch control in onboarding page\nLabel for toggle to turn switch control off and on"
     },
     "Switch Key" : {
       "comment" : "Header text for the switch keyboard area"
