--- a/Echo/Localizable.xcstrings
+++ b/Echo/Localizable.xcstrings
@@ -56,7 +56,7 @@
       "comment" : "Accesibility label for logo"
     },
     "Analytics" : {
-      "comment" : "Label for analytics picker\nThe label for the section about analytics"
+      "comment" : "The label for the section about analytics\nLabel for analytics picker"
     },
     "Analytics & Telemetry" : {
       "comment" : "The navigation title for the Analytics & Telemetry options page"
@@ -83,7 +83,7 @@
       "comment" : "An accessibility label for the up arrow image"
     },
     "Audio" : {
-      "comment" : "The label for the section about analytics\nLabel for the navigation link to the audio options page"
+      "comment" : "Label for the navigation link to the audio options page\nThe label for the section about analytics"
     },
     "Audio Settings" : {
       "comment" : "The navigation title for the Audio options page"
@@ -326,10 +326,10 @@
       "comment" : "Label for toggle that controls when scanning starts"
     },
     "Scanning" : {
-      "comment" : "Label for toggle to turn scanning off and on\nLabel for the scanning during onboarding\nLabel for the navigation link to the scanning options page"
+      "comment" : "Label for the scanning during onboarding\nLabel for toggle to turn scanning off and on\nLabel for the navigation link to the scanning options page"
     },
     "Scanning is when Echo automatically cycles through the items in the list one ofter the other reading them aloud one a time." : {
-      "comment" : "The footer explaining what scanning loops is\nExplaination of scanning during onboarding"
+      "comment" : "Explaination of scanning during onboarding\nThe footer explaining what scanning loops is"
     },
     "Scanning Options" : {
       "comment" : "The navigation title for the scanning options page"
