--- a/Echo/Localizable.xcstrings
+++ b/Echo/Localizable.xcstrings
@@ -83,7 +83,7 @@
       "comment" : "An accessibility label for the up arrow image"
     },
     "Audio" : {
-      "comment" : "Label for the navigation link to the audio options page\nThe label for the section about analytics"
+      "comment" : "The label for the section about analytics\nLabel for the navigation link to the audio options page"
     },
     "Audio Settings" : {
       "comment" : "The navigation title for the Audio options page"
@@ -119,7 +119,7 @@
       "comment" : "Explaination of swipe controls"
     },
     "Control Echo using switch presses to perform actions. Add new switches and change what they trigger." : {
-      "comment" : "Description describing what switch access is\nFooter description describing what switch access is"
+      "comment" : "Footer description describing what switch access is\nDescription describing what switch access is"
     },
     "Copied!" : {
       "comment" : "Label thats shown when text is copied"
@@ -326,7 +326,7 @@
       "comment" : "Label for toggle that controls when scanning starts"
     },
     "Scanning" : {
-      "comment" : "Label for the scanning during onboarding\nLabel for toggle to turn scanning off and on\nLabel for the navigation link to the scanning options page"
+      "comment" : "Label for the scanning during onboarding\nLabel for the navigation link to the scanning options page\nLabel for toggle to turn scanning off and on"
     },
     "Scanning is when Echo automatically cycles through the items in the list one ofter the other reading them aloud one a time." : {
       "comment" : "Explaination of scanning during onboarding\nThe footer explaining what scanning loops is"
@@ -395,7 +395,7 @@
       "comment" : "The default switch name"
     },
     "Switch Control" : {
-      "comment" : "Header for switch control in onboarding page\nLabel for toggle to turn switch control off and on"
+      "comment" : "Label for toggle to turn switch control off and on\nHeader for switch control in onboarding page"
     },
     "Switch Key" : {
       "comment" : "Header text for the switch keyboard area"
