--- a/Echo/Localizable.xcstrings
+++ b/Echo/Localizable.xcstrings
@@ -47,7 +47,7 @@
       "comment" : "Accesibility label for logo"
     },
     "Analytics" : {
-      "comment" : "The label for the section about analytics\nLabel for analytics picker"
+      "comment" : "Label for analytics picker\nThe label for the section about analytics"
     },
     "Analytics & Telemetry" : {
       "comment" : "The navigation title for the Analytics & Telemetry options page"
@@ -77,7 +77,7 @@
       "comment" : "An accessibility label for the up arrow image"
     },
     "Audio" : {
-      "comment" : "Label for the navigation link to the audio options page\nThe label for the section about analytics"
+      "comment" : "The label for the section about analytics\nLabel for the navigation link to the audio options page"
     },
     "Audio Settings" : {
       "comment" : "The navigation title for the Audio options page"
@@ -116,7 +116,7 @@
       "comment" : "Header for commands area"
     },
     "Control Echo using switch presses to perform actions. Add new switches and change what they trigger." : {
-      "comment" : "Footer description describing what switch access is\nDescription describing what switch access is"
+      "comment" : "Description describing what switch access is\nFooter description describing what switch access is"
     },
     "Copied!" : {
       "comment" : "Label thats shown when text is copied"
@@ -218,7 +218,7 @@
       "comment" : "The label for the Hebrew language when setting prediction language, make sure to include the experimental tag"
     },
     "Hide" : {
-      "comment" : "Label to hide arrows\nPicker option for control command"
+      "comment" : "Picker option for control command\nLabel to hide arrows"
     },
     "Hold" : {
       "comment" : "The label that is shown next to the single hold action"
@@ -293,7 +293,7 @@
       "comment" : "Explaination of prediction during onboarding"
     },
     "Prediction" : {
-      "comment" : "Label for toggle to turn prediction off and on\nLabel for the section in settings about prediction"
+      "comment" : "Label for the section in settings about prediction\nLabel for toggle to turn prediction off and on"
     },
     "Prediction helps you to get to the words you want to speak faster" : {
       "comment" : "Footer for the section in settings about prediction"
@@ -317,7 +317,7 @@
 
     },
     "Save" : {
-      "comment" : "The save toolbar button when saving controller mapping\nThe label for the save changes button"
+      "comment" : "The label for the save changes button\nThe save toolbar button when saving controller mapping"
     },
     "Scan **%lld** times before stopping" : {
       "comment" : "A label that outlines the number of scanning loops the app will go on. Please leave the value in bold."
@@ -329,7 +329,7 @@
       "comment" : "Label for toggle that controls when scanning starts"
     },
     "Scanning" : {
-      "comment" : "Label for the navigation link to the scanning options page\nLabel for the scanning during onboarding\nLabel for toggle to turn scanning off and on"
+      "comment" : "Label for the scanning during onboarding\nLabel for toggle to turn scanning off and on\nLabel for the navigation link to the scanning options page"
     },
     "Scanning is when Echo automatically cycles through the items in the list one ofter the other reading them aloud one a time." : {
       "comment" : "Explaination of scanning during onboarding\nThe footer explaining what scanning loops is"
@@ -388,20 +388,17 @@
     "Swipe Gestures" : {
       "comment" : "Label for swipe picker"
     },
-    "Swipe up, down, left or right to control Echo\n   • **Right:** Select the current item\n   • **Down:** Go to the next item in the list\n   • **Left:** Remove the last entered character\n   • **Up:** Go to the previous item in the list" : {
+    "Swipe up, down, left or right to control Echo\n   • **Tap:** Select the current item\n   • **Left to Right:** Select the current item\n   • **Right to Left:** Remove the last entered character\n   • **Top to Bottom:** Go to the previous item in the list\n   • **Bottom to Top:** Go to the next item in the list" : {
       "comment" : "A description of all the swiping gestures. Please use the same format including bold text"
     },
     "Swipe?" : {
       "comment" : "Header for swipe onboarding page"
     },
-    "Swiping gestures" : {
-      "comment" : "Toggle for swiping gestures"
-    },
     "Switch %lld" : {
       "comment" : "The default switch name"
     },
     "Switch Control" : {
-      "comment" : "Label for toggle to turn switch control off and on\nHeader for switch control in onboarding page"
+      "comment" : "Header for switch control in onboarding page\nLabel for toggle to turn switch control off and on"
     },
     "Switch Key" : {
       "comment" : "Header text for the switch keyboard area"
@@ -411,6 +408,9 @@
     },
     "Switch: %@" : {
       "comment" : "The navigation title when editing a given switch. It contains the user entered name after the colon"
+    },
+    "Tap and Gesture control" : {
+      "comment" : "Toggle for swiping gestures"
     },
     "Thank you for using Echo, this is your cue voice" : {
       "comment" : "This is text is read aloud by the Text-To-Speech system as a preview"
@@ -512,7 +512,7 @@
       "comment" : "The footer for the options that control the cue voice"
     },
     "Your speaking voice is the voice that is used to communicate with your communication partner. Select the options that you want to represent your voice." : {
-      "comment" : "The footer for the options that control the speaking voice\nExplanation of speaking voice during onboarding"
+      "comment" : "Explanation of speaking voice during onboarding\nThe footer for the options that control the speaking voice"
     }
   },
   "version" : "1.0"
